<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_button"
            android:title="@string/nav_button" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gesture"
            android:title="@string/nav_gesture" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_gravity"
            android:title="@string/nav_gravity" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_joystick"
            android:title="@string/nav_joystick" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_voice"
            android:title="@string/nav_voice" />
    </group>

<!--Example for single check menu
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>
-->

</menu>
